Fixed heading margin-top spacing issue in factbox divs. Updated gems.

--- a/app/assets/stylesheets/bootstrap_and_overrides.css.less
+++ b/app/assets/stylesheets/bootstrap_and_overrides.css.less
@@ -1542,6 +1542,10 @@ blockquote.pull-left {
 	margin: 0;
 }
 
+.factbox h2, .factbox h3, .factbox h4 {
+	margin-top: 0;
+}
+
 .factbox p {
 	margin-bottom: 0;
 }
